# AOC2021

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: python-package.yml
_ocaml_day1-2/.devcontainer/: Dockerfile  devcontainer.json
_ocaml_day1-2/day1/: main.ml
_ocaml_day1-2/day2/: main.ml
day1/: main.ml
day2/: main.ml
src/aoc/: __main__.py  _version.py
src/aoc/day10/: __init__.py  _day10.py
src/aoc/day11/: __init__.py  _day11.py
src/aoc/day12/: __init__.py  _day12.py
src/aoc/day13/: __init__.py  _day13.py
src/aoc/day14/: __init__.py  _day14.py
src/aoc/day15/: __init__.py  _day15.py
src/aoc/day16/: __init__.py  _day16.py
src/aoc/day17/: __init__.py  _day17.py
src/aoc/day18/: __init__.py  _day18.py
src/aoc/day3/: __init__.py  _day3.py
src/aoc/day4/: __init__.py  _day4.py
src/aoc/day5/: __init__.py  _day5.py
src/aoc/day6/: __init__.py  _day6.py
src/aoc/day7/: __init__.py  _day7.py
src/aoc/day8/: __init__.py  _day8.py
src/aoc/day9/: __init__.py  _day9.py
